--- a/.gitignore
+++ b/.gitignore
@@ -27,12 +27,9 @@ env/
 # OS files
 .DS_Store
 Thumbs.db
-
-# Logs
-*.log
-
-# TensorFlow/Keras artifacts
-*.h5
+.env
+.env.local
+.envrc
 *.ckpt
 checkpoints/
 logs/
@@ -46,3 +43,4 @@ node_modules/
 # Data & cache
 *.cache/
 .cache/
+.gemini/
